// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/shifts/new.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <form
    class="v-form"
    data-form=""
    data-z-shift-form=""
    novalidate="novalidate"
  >
    <div>
      <div
        class="z-form-card-stub"
        title="基本情報"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <z-form-card-item-set-stub
          icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
          label=""
        >
          <div
            class="root"
            data-task=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="v-input__slot"
                  role="button"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      勤務シフト区分 *
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        data-task-input-field=""
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate mdi mdi-menu-down theme--light"
                        />
                      </div>
                    </div>
                    <input
                      type="hidden"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <!---->
        <z-form-card-item-set-stub
          icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
          label=""
        >
          <div
            class="root"
            data-office=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select v-autocomplete"
              error-messages=""
              label="事業所 *"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="v-input__slot"
                  role="combobox"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      事業所 *
                    </label>
                    <input
                      autocomplete="off"
                      type="text"
                    />
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate mdi mdi-menu-down theme--light"
                        />
                      </div>
                    </div>
                    <input
                      type="hidden"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <!---->
        <z-form-card-item-set-stub
          icon="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
          label=""
        >
          <div
            class="root"
            data-assigner=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--is-disabled v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="v-input__slot"
                  role="button"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label v-label--is-disabled theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      管理スタッフ *
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        disabled="disabled"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate v-icon--disabled mdi mdi-menu-down theme--light"
                        />
                      </div>
                    </div>
                    <input
                      type="hidden"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <z-flex-stub>
            <div
              class="root"
              data-first-assignee=""
              data-z-form-card-item=""
            >
              <div
                class="v-input v-input--is-disabled v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    class="v-input__slot"
                    role="button"
                    style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-select__slot"
                    >
                      <label
                        class="v-label v-label--is-disabled theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        担当スタッフ（1人目） *
                      </label>
                      <div
                        class="v-select__selections"
                      >
                        <input
                          aria-readonly="false"
                          autocomplete="off"
                          disabled="disabled"
                          readonly="readonly"
                          type="text"
                        />
                      </div>
                      <div
                        class="v-input__append-inner"
                      >
                        <div
                          class="v-input__icon v-input__icon--append"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon notranslate v-icon--disabled mdi mdi-menu-down theme--light"
                          />
                        </div>
                      </div>
                      <input
                        type="hidden"
                      />
                    </div>
                    <div
                      class="v-menu"
                    >
                      <!---->
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <transition-group-stub
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <!---->
            <div
              class="root z-checkbox-container"
            >
              <div
                class="v-input v-input--is-disabled theme--light v-input--selection-controls v-input--checkbox"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <input
                        aria-checked="false"
                        disabled="disabled"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                    <label
                      class="v-label v-label--is-disabled theme--light"
                      style="left: 0px; position: relative;"
                    >
                      未定
                    </label>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </z-flex-stub>
          <div
            class="root"
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                    />
                    <input
                      aria-checked="false"
                      data-second-assignee-enabled=""
                      role="checkbox"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                  </div>
                  <label
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    担当スタッフ（2人目）を設定する
                  </label>
                </div>
              </div>
            </div>
          </div>
          <!---->
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
          label=""
        >
          <div
            class="root"
            data-note=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      備考
                    </label>
                    <input
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
      <div
        class="z-form-card-stub"
        title="勤務日・勤務時間"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <z-form-card-item-set-stub
          icon="M15,13H16.5V15.82L18.94,17.23L18.19,18.53L15,16.69V13M19,8H5V19H9.67C9.24,18.09 9,17.07 9,16A7,7 0 0,1 16,9C17.07,9 18.09,9.24 19,9.67V8M5,21C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3H6V1H8V3H16V1H18V3H19A2,2 0 0,1 21,5V11.1C22.24,12.36 23,14.09 23,16A7,7 0 0,1 16,23C14.09,23 12.36,22.24 11.1,21H5M16,11.15A4.85,4.85 0 0,0 11.15,16C11.15,18.68 13.32,20.85 16,20.85A4.85,4.85 0 0,0 20.85,16C20.85,13.32 18.68,11.15 16,11.15Z"
          label=""
        >
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              cols="12"
              md="6"
              tag="div"
            >
              <div
                class="root"
                data-schedule-date=""
                data-z-form-card-item=""
              >
                <div
                  class="z-date-field"
                >
                  <div
                    class="v-input v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-text-field__slot"
                        >
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: absolute;"
                          >
                            勤務日 *
                          </label>
                          <input
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <v-dialog-stub
                    closedelay="0"
                    contentclass=""
                    data-z-date-field-dialog=""
                    opendelay="0"
                    origin="center center"
                    retainfocus="true"
                    transition="dialog-transition"
                    width="290px"
                  >
                    <v-date-picker-stub
                      data-z-date-field-picker=""
                      dayformat="[Function]"
                      eventcolor="warning"
                      firstdayofweek="1"
                      headerdateformat="[Function]"
                      locale="ja-JP"
                      localefirstdayofyear="0"
                      max="2028-05-17"
                      min="1920-01-01"
                      nexticon="$next"
                      nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                      nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                      notitle="true"
                      previcon="$prev"
                      prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                      prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                      selecteditemstext="$vuetify.datePicker.itemsSelected"
                      showcurrent="true"
                      titledateformat="[Function]"
                      type="date"
                      width="290"
                      yearformat="[Function]"
                    >
                      <v-spacer-stub
                        tag="div"
                      />
                      <a
                        class="v-btn-stub"
                        color="primary"
                        data-z-date-field-button-clear=""
                        text=""
                      >
                        クリア
                      </a>
                      <a
                        class="v-btn-stub"
                        color="primary"
                        data-z-date-field-button-cancel=""
                        text=""
                      >
                        キャンセル
                      </a>
                    </v-date-picker-stub>
                  </v-dialog-stub>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              class="d-flex"
              cols="12"
              md="6"
              tag="div"
            >
              <div
                class="root"
                data-schedule-start=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: -24px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          開始 *
                        </label>
                        <input
                          data-schedule-start-input-field=""
                          type="time"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <z-flex-shrink-stub
                class="pb-2 pl-2 pt-4"
              >
                〜
              </z-flex-shrink-stub>
              <div
                class="root"
                data-schedule-end=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: -24px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          終了 *
                        </label>
                        <input
                          data-schedule-end-input-field=""
                          type="time"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
          </v-row-stub>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M6,2H18V8H18V8L14,12L18,16V16H18V22H6V16H6V16L10,12L6,8V8H6V2M16,16.5L12,12.5L8,16.5V20H16V16.5M12,11.5L16,7.5V4H8V7.5L12,11.5M10,6H14V6.75L12,8.75L10,6.75V6Z"
          label=""
        >
          <div>
            <v-row-stub
              nogutters="true"
              tag="div"
            >
              <!---->
              <!---->
              <v-col-stub
                cols="12"
                sm="6"
                tag="div"
              >
                <div
                  class="root"
                  data-duration-resting=""
                  data-z-form-card-item=""
                >
                  <div
                    class="z-hour-and-minute-field"
                    data-duration-resting-input-field=""
                  >
                    <z-flex-stub
                      class="slot"
                    >
                      <div
                        class="item"
                      >
                        <div
                          class="v-input z-text-field--numeric v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: -24px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <label
                                  class="v-label v-label--active theme--light"
                                  style="left: 0px; position: absolute;"
                                >
                                  休憩 *
                                </label>
                                <input
                                  data-hour-text-field=""
                                  type="text"
                                />
                                <div
                                  class="v-text-field__suffix"
                                >
                                  時間
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="item"
                      >
                        <div
                          class="v-input z-text-field--numeric v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  data-minute-text-field=""
                                  max-length="2"
                                  type="text"
                                />
                                <div
                                  class="v-text-field__suffix"
                                >
                                  分
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </z-flex-stub>
                    <div
                      class="details"
                    >
                      <!---->
                    </div>
                  </div>
                </div>
              </v-col-stub>
              <v-col-stub
                cols="12"
                sm="6"
                tag="div"
              >
                <div
                  class="root"
                  data-z-form-card-item=""
                >
                  <div
                    class="z-hour-and-minute-field"
                  >
                    <z-flex-stub
                      class="slot"
                    >
                      <div
                        class="item"
                      >
                        <div
                          class="v-input z-text-field--numeric v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: -24px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <label
                                  class="v-label v-label--active v-label--is-disabled theme--light"
                                  style="left: 0px; position: absolute;"
                                >
                                  勤務時間
                                </label>
                                <input
                                  data-hour-text-field=""
                                  disabled="disabled"
                                  readonly="readonly"
                                  type="text"
                                />
                                <div
                                  class="v-text-field__suffix"
                                >
                                  時間
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="item"
                      >
                        <div
                          class="v-input z-text-field--numeric v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  data-minute-text-field=""
                                  disabled="disabled"
                                  max-length="2"
                                  readonly="readonly"
                                  type="text"
                                />
                                <div
                                  class="v-text-field__suffix"
                                >
                                  分
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </z-flex-stub>
                    <div
                      class="details"
                    >
                      <!---->
                    </div>
                  </div>
                </div>
              </v-col-stub>
            </v-row-stub>
          </div>
        </z-form-card-item-set-stub>
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
      <!---->
      <z-form-action-button-stub
        icon="M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
        text="登録"
      />
    </div>
  </form>
</div>
`;

exports[`pages/shifts/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "assignee.0.staffId") 1`] = `
<div
  class="root"
  data-first-assignee=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--is-disabled v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--is-disabled theme--light"
            style="left: 0px; position: absolute;"
          >
            担当スタッフ（1人目） *
          </label>
          <div
            class="v-select__selections"
          >
            <input
              aria-readonly="false"
              autocomplete="off"
              disabled="disabled"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate v-icon--disabled mdi mdi-menu-down theme--light"
              />
            </div>
          </div>
          <input
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              担当スタッフ（1人目）を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/shifts/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "assignerId") 1`] = `
<div
  class="root"
  data-assigner=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--is-disabled v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--is-disabled theme--light"
            style="left: 0px; position: absolute;"
          >
            管理スタッフ *
          </label>
          <div
            class="v-select__selections"
          >
            <input
              aria-readonly="false"
              autocomplete="off"
              disabled="disabled"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate v-icon--disabled mdi mdi-menu-down theme--light"
              />
            </div>
          </div>
          <input
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              管理スタッフを入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/shifts/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "durationResting") 1`] = `
<div
  class="root"
  data-duration-resting=""
  data-z-form-card-item=""
>
  <div
    class="z-hour-and-minute-field"
    data-duration-resting-input-field=""
  >
    <z-flex-stub
      class="slot"
    >
      <div
        class="item"
      >
        <div
          class="v-input z-text-field--numeric v-input--has-state v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
            >
              <fieldset
                aria-hidden="true"
              >
                <legend
                  style="width: -24px;"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </legend>
              </fieldset>
              <div
                class="v-text-field__slot"
              >
                <label
                  class="v-label v-label--active theme--light error--text"
                  style="left: 0px; position: absolute;"
                >
                  休憩 *
                </label>
                <input
                  data-hour-text-field=""
                  type="text"
                />
                <div
                  class="v-text-field__suffix"
                >
                  時間
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="item"
      >
        <div
          class="v-input z-text-field--numeric v-input--has-state v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
            >
              <fieldset
                aria-hidden="true"
              >
                <legend
                  style="width: 0px;"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </legend>
              </fieldset>
              <div
                class="v-text-field__slot"
              >
                <input
                  data-minute-text-field=""
                  max-length="2"
                  type="text"
                />
                <div
                  class="v-text-field__suffix"
                >
                  分
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </z-flex-stub>
    <div
      class="details"
    >
      <v-messages-stub
        color="error"
        value="休憩を入力してください。"
      />
    </div>
  </div>
</div>
`;

exports[`pages/shifts/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "note") 1`] = `
<div
  class="root"
  data-note=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            備考
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              備考を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/shifts/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "officeId") 1`] = `
<div
  class="root"
  data-office=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select v-autocomplete error--text"
    error-messages="事業所を入力してください。"
    label="事業所 *"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="combobox"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-select__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            事業所 *
          </label>
          <input
            autocomplete="off"
            type="text"
          />
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-menu-down theme--light error--text"
              />
            </div>
          </div>
          <input
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              事業所を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/shifts/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "schedule.date") 1`] = `
<div
  class="root"
  data-schedule-date=""
  data-z-form-card-item=""
>
  <div
    class="z-date-field"
  >
    <div
      class="v-input v-input--has-state v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
        >
          <fieldset
            aria-hidden="true"
          >
            <legend
              style="width: 0px;"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="v-text-field__slot"
          >
            <label
              class="v-label theme--light error--text"
              style="left: 0px; position: absolute;"
            >
              勤務日 *
            </label>
            <input
              readonly="readonly"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light error--text"
            role="alert"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            >
              <div
                class="v-messages__message"
              >
                勤務日を入力してください。
              </div>
            </transition-group-stub>
          </div>
        </div>
      </div>
    </div>
    <v-dialog-stub
      closedelay="0"
      contentclass=""
      data-z-date-field-dialog=""
      opendelay="0"
      origin="center center"
      retainfocus="true"
      transition="dialog-transition"
      width="290px"
    >
      <v-date-picker-stub
        data-z-date-field-picker=""
        dayformat="[Function]"
        eventcolor="warning"
        firstdayofweek="1"
        headerdateformat="[Function]"
        locale="ja-JP"
        localefirstdayofyear="0"
        max="2028-05-17"
        min="1920-01-01"
        nexticon="$next"
        nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
        nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
        notitle="true"
        previcon="$prev"
        prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
        prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
        selecteditemstext="$vuetify.datePicker.itemsSelected"
        showcurrent="true"
        titledateformat="[Function]"
        type="date"
        width="290"
        yearformat="[Function]"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-clear=""
          text=""
        >
          クリア
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-cancel=""
          text=""
        >
          キャンセル
        </a>
      </v-date-picker-stub>
    </v-dialog-stub>
  </div>
</div>
`;

exports[`pages/shifts/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "schedule.end") 1`] = `
<div
  class="root"
  data-schedule-end=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            終了 *
          </label>
          <input
            data-schedule-end-input-field=""
            type="time"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              勤務日（終了時間）を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/shifts/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "schedule.start") 1`] = `
<div
  class="root"
  data-schedule-start=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            開始 *
          </label>
          <input
            data-schedule-start-input-field=""
            type="time"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              勤務日（開始時間）を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/shifts/new.vue submit should display errors when server responses 400 Bad Request (error occurred in "task") 1`] = `
<div
  class="root"
  data-task=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-select__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            勤務シフト区分 *
          </label>
          <div
            class="v-select__selections"
          >
            <input
              aria-readonly="false"
              autocomplete="off"
              data-task-input-field=""
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-menu-down theme--light error--text"
              />
            </div>
          </div>
          <input
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              勤務シフト区分を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
